--- a/lang/ru/json.json
+++ b/lang/ru/json.json
@@ -1098,5 +1098,11 @@
     "Zimbabwe": "Зимбабве",
     "ZIP / Postal Code": "Почтовый индекс",
     "Zip / Postal Code": "Почтовый индекс",
-    "Åland Islands": "Аландские острова"
+    "Åland Islands": "Аландские острова",
+
+    "Reset Password Notification": "Изменение пароля на сайте anistroy.ru",
+    "You are receiving this email because we received a password reset request for your account.": "Вы (или еще кто-то) запросили изменение пароля для входа в личный кабинет на сайте anistroy.ru",
+    "Reset Password": "Изменение пароля",
+    "This password reset link will expire in :count minutes.": "Срок действия этой ссылки для сброса пароля истечет через:count минут",
+    "If you did not request a password reset, no further action is required.": "Если запрос был отправлен не вами, просто проигнорируйте это письмо."
 }
